[tool.poetry]
name = "jyyslide-md"
version = "0.1.0"
description = ""
authors = ["zweix123 <1979803044@qq.com>"]
readme = "README.md"
packages = [{include = "jyyslide_md"}]

[tool.poetry.dependencies]
python = "^3.10"
chardet = "^5.1.0"
requests = "^2.28.2"
jinja2 = "^3.1.2"
markdown = "^3.4.1"
pyquery = "^2.0.0"
pygments = "^2.14.0"
types-markdown = "^3.4.2.6"
types-requests = "^2.28.11.17"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
