[tool.poetry]
authors = ["zweix123 <1979803044@qq.com>"]
description = ""
name = "jyyslide-md"
package-mode = false
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
jinja2 = "^3.1.2"
lxml = "^4.9.4"
markdown = "^3.4.1"
pygments = "^2.14.0"
pyquery = "^2.0.0"
python = "^3.10"
pyyaml = "^6.0.1"
requests = "^2.28.2"
types-markdown = "^3.4.2.6"
types-pyyaml = "^6.0.12.12"
types-requests = "^2.28.11.17"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.1.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
